force-app/main/default/objects/Campaign/fields/Attended_CP_Count__c.field-meta.xml
<CustomField>
    <fullName>Attended_CP_Count__c</fullName>
    <label>Attended CP Count</label>
    <summaryFilterItems>
        <field>CampaignMember.Is_Attended__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>