force-app/main/default/objects/Campaign/fields/Attended_People_Count__c.field-meta.xml
<CustomField>
    <fullName>Attended_People_Count__c</fullName>
    <label>Attended People Count</label>
    <summarizedField>CampaignMember.Total_Attendees__c</summarizedField>
    <summaryFilterItems>
        <field>CampaignMember.Is_Attended__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>