force-app/main/default/objects/Campaign/fields/Available_Budget_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Available_Budget_in_Campaign__c</fullName>
    <formula>BudgetedCost - ActualCost</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Budget in Campaign</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>