force-app/main/default/objects/Campaign/fields/Campaign_Spend_per_Lead__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Spend_per_Lead__c</fullName>
    <formula>IF(AND( NumberOfResponses &lt;&gt; 0, NOT(ISNULL(NumberOfResponses))), ActualCost / NumberOfResponses , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Spend per Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>