force-app/main/default/objects/Campaign/fields/CBSL_Data__c.field-meta.xml
<CustomField>
    <fullName>CBSL_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CBSL Data</label>
    <type>Checkbox</type>
</CustomField>