force-app/main/default/objects/Campaign/fields/Conversion_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Ratio__c</fullName>
    <formula>IF( 
AND(NumberOfOpportunities &lt;&gt; 0, NOT(ISNULL(NumberOfOpportunities))),
(NumberOfWonOpportunities /  NumberOfOpportunities )*100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Conversion Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>