force-app/main/default/objects/Campaign/fields/Cost_per_Booked_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Booked_Opportunities__c</fullName>
    <formula>IF(
AND(NumberOfWonOpportunities &lt;&gt; 0, NOT(ISNULL(NumberOfWonOpportunities))),
ActualCost /  NumberOfWonOpportunities , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Spend per Won Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>