force-app/main/default/objects/Campaign/fields/Cost_Per_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Opportunity__c</fullName>
    <formula>IF( 
AND( NumberOfOpportunities &lt;&gt; 0, NOT(ISNULL(NumberOfOpportunities))),  
ActualCost /  NumberOfOpportunities ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost per Walkin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>