force-app/main/default/objects/Campaign/fields/Cost_per_Response__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Response__c</fullName>
    <formula>IF(AND( NumberOfResponses  &lt;&gt; 0, NOT(ISNULL(NumberOfResponses))),  ActualCost /  NumberOfResponses , 0)</formula>
    <label>Cost per Lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>