force-app/main/default/objects/Campaign/fields/Is_Virtual_Number_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Is_Virtual_Number_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Virtual Number Campaign</label>
    <type>Checkbox</type>
</CustomField>