force-app/main/default/objects/Campaign/fields/Market_Spend__c.field-meta.xml
<CustomField>
    <fullName>Market_Spend__c</fullName>
    <formula>IF(
AND(AmountWonOpportunities &lt;&gt; 0, NOT(ISNULL(AmountWonOpportunities))),
(ActualCost / AmountWonOpportunities) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Spend %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>