force-app/main/default/objects/Campaign/fields/Marketing_Executive_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Executive_Campaign__c</fullName>
    <label>Marketing Executive (Campaign)</label>
    <type>Email</type>
</CustomField>