force-app/main/default/objects/Campaign/fields/No_of_Opportunities_Unit_Booked__c.field-meta.xml
<CustomField>
    <fullName>No_of_Opportunities_Unit_Booked__c</fullName>
    <label>No of Opportunities (Unit Booked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>