force-app/main/default/objects/Campaign/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Referral &amp; Loyalty</fullName>
            </value>
            <value>
                <fullName>Corporate Outreach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>