force-app/main/default/objects/Campaign/fields/Registration_Count1__c.field-meta.xml
<CustomField>
    <fullName>Registration_Count1__c</fullName>
    <label>Registration Count</label>
    <summarizedField>CampaignMember.Additional_Attendees__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>