force-app/main/default/objects/Campaign/fields/RW_Campaign_Budget__c.field-meta.xml
<CustomField>
    <fullName>RW_Campaign_Budget__c</fullName>
    <label>Campaign Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>