force-app/main/default/objects/Campaign/fields/RW_Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>RW_Expected_Revenue__c</fullName>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>