force-app/main/default/objects/Campaign/fields/Send_Notification_to_VDNB_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Send_Notification_to_VDNB_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notification to VDNB Opportunities</label>
    <type>Checkbox</type>
</CustomField>