force-app/main/default/objects/Campaign/fields/Sub_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sub_Source__c</fullName>
    <label>Sub Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RW_Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Airoli - koparkhairane</fullName>
            </value>
            <value>
                <fullName>BKC</fullName>
            </value>
            <value>
                <fullName>Bombay Times</fullName>
            </value>
            <value>
                <fullName>Call-Gardens</fullName>
            </value>
            <value>
                <fullName>Call Us Widget</fullName>
            </value>
            <value>
                <fullName>Chembur – Wadala</fullName>
            </value>
            <value>
                <fullName>Churchgate – Worli</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>Commercial Lease</fullName>
            </value>
            <value>
                <fullName>Corporate website</fullName>
            </value>
            <value>
                <fullName>Corporate website-Gardens</fullName>
            </value>
            <value>
                <fullName>Crm Call</fullName>
            </value>
            <value>
                <fullName>Crm Call2</fullName>
            </value>
            <value>
                <fullName>Economic Times</fullName>
            </value>
            <value>
                <fullName>EEH – Kanjurmarg - Mulund - Nahur</fullName>
            </value>
            <value>
                <fullName>EEH – Sion –Vikhroli</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Facebook_call_Liberty</fullName>
            </value>
            <value>
                <fullName>Facebook_call_NumeroUno</fullName>
            </value>
            <value>
                <fullName>Facebook_call_ NumeroUno</fullName>
            </value>
            <value>
                <fullName>Facebook_call_ParkAvenue</fullName>
            </value>
            <value>
                <fullName>Facebook_call_Runwalcommerz</fullName>
            </value>
            <value>
                <fullName>Facebook_call_RunwalEdge</fullName>
            </value>
            <value>
                <fullName>Facebook Call</fullName>
            </value>
            <value>
                <fullName>Facebook Call - Avenue</fullName>
            </value>
            <value>
                <fullName>Facebook Call -Bliss</fullName>
            </value>
            <value>
                <fullName>Facebook Call-Forests</fullName>
            </value>
            <value>
                <fullName>Facebook Call-GardenVista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>