force-app/main/default/objects/Campaign/fields/Tollfree_Number__c.field-meta.xml
<CustomField>
    <fullName>Tollfree_Number__c</fullName>
    <label>Tollfree Number</label>
    <type>Phone</type>
</CustomField>