force-app/main/default/objects/Campaign/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATL</fullName>
            </value>
            <value>
                <fullName>BTL</fullName>
            </value>
            <value>
                <fullName>TTL</fullName>
            </value>
            <value>
                <fullName>CP Meets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>