force-app/main/default/objects/Campaign/validationRules/mandate_Toll_Free_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>mandate_Toll_Free_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(Tollfree_Number__c),
    NOT(ISPICKVAL(Origin__c, &quot;Online&quot;))
)</errorConditionFormula>
    <errorMessage>Tollfree number is  mandatory,</errorMessage>
</ValidationRule>