force-app/main/default/objects/Campaign/validationRules/validate_Expected_Response.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Expected_Response</fullName>
    <active>true</active>
    <errorConditionFormula>ExpectedResponse &gt; 1</errorConditionFormula>
    <errorDisplayField>ExpectedResponse</errorDisplayField>
    <errorMessage>Expected Response must be less than 100</errorMessage>
</ValidationRule>