force-app/main/default/objects/Campaign/listViews/All_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Campaigns</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Event_Date_Time__c</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>CBSL_Data__c</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>Type__c</columns>
    <columns>RW_Sub_Type__c</columns>
    <columns>Sub_Sub_Source__c</columns>
    <columns>Tollfree_Number__c</columns>
    <columns>Digital_Maketing_Campaign_Code__c</columns>
    <columns>Primary_Project__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Tollfree_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CAMPAIGN.END_DATE</field>
        <operation>lessOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>All Campaign</label>
</ListView>