force-app/main/default/objects/Campaign/listViews/CBSL_Campaign.listView-meta.xml
<ListView>
    <fullName>CBSL_Campaign</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CBSL_Data__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CBSL Campaign</label>
</ListView>